2008-01-02  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Include new file in dist
	* Test.Rules.Interoperability.mdp: New. MonoDevelop project file.

2007-12-30  Sebastien Pouliot  <sebastien@ximian.com> 

	* GetLastErrorMustBeCalledRightAfterPInvokeTest.cs: New. Unit tests 
	for GetLastErrorMustBeCalledRightAfterPInvokeRule by Andreas Noever
	* PInvokeShouldNotBeVisibleTest.cs: New. Unit tests for 
	PInvokeShouldNotBeVisibleRule by Andreas Noever
	* Makefile.am: New. Makefile for tests