@@ -1,3 +1,8 @@
+2008-01-21  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* UseManagedAlternativesToPInvokeTest.cs: New. Unit tests 
+	from Daniel Abramov (with a bit more coverage by myself).
+
 2008-01-02  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* Makefile.am: Include new file in dist
